Do some fixes in the code which breaks the app design on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,14 @@
+body{
+    width: 100vw;
+}
 p{
     font-size: 1rem;
+}
+
+h1{
+    font-size: 2rem; 
+}
+
+.my-image img{
+    width: 7rem
 }
