--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body{
     font-weight: 400;
     line-height: 1.7;
     overflow: hidden;
+    /* width: 100vw; */
 }
 
 a{
@@ -34,6 +35,9 @@ p{
     font-size:1.5rem;
 }
 
+h1{
+    font-size: 3.5rem;
+}
 header{
     height: 100vh;
     background-image: linear-gradient(
@@ -55,7 +59,7 @@ header{
     height: 100vh;
     max-width: 1100px;
     margin: 0 auto;
-    padding: 0 2rem;   
+    padding: 0 2rem;
 }
 
 .icon-box{
@@ -84,7 +88,7 @@ header{
     position: absolute;
     left: 0;
     top:0;
-    width: 100vw;
+    width: 100%;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -120,8 +124,6 @@ header{
 
 .heading-primary{
     color: white;
-    /* text-transform: uppercase; */
-    font-size: 1.6rem;
     font-weight: 400px;
     letter-spacing: .3rem;
     /* animation : scaleOut var(--animation-time) ease-out; */
